--- a/docs/templates/contact.html
+++ b/docs/templates/contact.html
@@ -1,4 +1,4 @@
-<section class="col-md-12 col-sm-12 col-xs-12 pagebox-contact" id="contact" ng-controller="contactCtrl">
+<section class="col-md-12 col-sm-12 col-xs-12 pagebox-contact" id="contact">
 	<div class="container">
 		<div class="col-sm-12 col-xs-12">
 			<img src="img/site-img2.png" class="img-responsive center-block" alt="">
