--- a/docs/templates/faq.html
+++ b/docs/templates/faq.html
@@ -1,4 +1,4 @@
-<section class="col-md-12 col-sm-12 col-xs-12 pagebox-faq azul-escuro" ng-controller="faqCtrl">
+<section class="col-md-12 col-sm-12 col-xs-12 pagebox-faq azul-escuro">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
