--- a/docs/templates/home.html
+++ b/docs/templates/home.html
@@ -1,4 +1,4 @@
-<section class="col-md-12 col-sm-12 col-xs-12 pagebox-home nopadding" ng-controller="homeCtrl">
+<section class="col-md-12 col-sm-12 col-xs-12 pagebox-home nopadding">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12 home-steps">
