--- a/docs/templates/plans.html
+++ b/docs/templates/plans.html
@@ -1,4 +1,4 @@
-<section class="col-md-12 col-sm-12 col-xs-12 pagebox-plans azul-escuro" ng-controller="plansCtrl">
+<section class="col-md-12 col-sm-12 col-xs-12 pagebox-plans azul-escuro">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
