--- a/docs/templates/plans.htm
+++ b/docs/templates/plans.htm
@@ -4,8 +4,8 @@
 			<div class="col-md-12 col-sm-12 col-xs-12">
 				<h2>PLANS</h2>
 			</div>
-			<div class="col-md-4 col-sm-4 col-xs-12 plans-box"  ng-repeat="price in prices">
-				<div class="col-md-12 col-sm-12 col-xs-12">
+			<div class="col-md-4 col-sm-4 col-xs-12 plans-box" ng-repeat="price in prices">
+				<div class="col-md-12 col-sm-12 col-xs-12 nopadding-tablet">
 					<div class="col-md-12 col-sm-12 col-xs-12 verde-claro">
 						<h3>{{price.name}}</h3>
 					</div>
