--- a/docs/css/template-style/home.css
+++ b/docs/css/template-style/home.css
@@ -5,6 +5,8 @@
 	background-repeat: repeat-y;
 	background-position: -0px -80px;
 	background-image: url(../../img/site-img1.png);
+	background-attachment: fixed;
+  	background-size: cover;
 } 
 
 .home-steps div{
