--- a/docs/templates/footer.html
+++ b/docs/templates/footer.html
@@ -2,26 +2,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-6 col-xs-12 footer-media">
-				<li class="col-md-1 col-sm-4 col-xs-4 router-btn-simple">
+				<li class="col-xs-3 router-btn-simple"></li>
+				<li class="col-xs-2 router-btn-simple">
 					<a href="https://www.facebook.com/Guepebr/" target="_blank">
 						<i class="fa fa-facebook" aria-hidden="true"></i>
 					</a>
 				</li>	
-				<li class="col-md-1 col-sm-4 col-xs-4 router-btn-simple">
+				<li class="col-xs-2 router-btn-simple">
 					<a href="https://github.com/CloseBRF" target="_blank">
 						<i class="fa fa-github" aria-hidden="true"></i>
 					</a>
 				</li>	
-				<li class="col-md-1 col-sm-4 col-xs-4 router-btn-simple">
+				<li class="col-xs-2 router-btn-simple">
 					<a href="http://programmercrazy.tumblr.com/" target="_blank">
 						<i class="fa fa-tumblr" aria-hidden="true"></i>
 					</a>
 				</li>				
 			</div>
-
-			<div class="col-md-12 col-sm-6 col-xs-12 pdg-top10">
-				<p>&copy; Guepe 2017</p>
-			</div>
+			<div class="col-md-12 col-sm-12 col-xs-12 pdg-top10">
+				<p>Copyright &copy; Guepe 2017</p>
+			</div>			
 		</div>
 	</div>
 </div>
