--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -60,7 +60,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	height: auto;
 	background-repeat: no-repeat;
 	background-position: -0px -80px;
-	background-image: url(../../img/home/site-img1.png);
+	background-image: url(../img/home/site-img1.png);
 	background-attachment: fixed;
   	background-size: cover;
 } 
@@ -132,7 +132,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	height: auto;
 	background-repeat: no-repeat;
 	background-position: -0px -80px;
-	background-image: url(../../img/home/site-img1.png);
+	background-image: url(../img/home/site-img1.png);
 	background-attachment: fixed;
   	background-size: cover;
 } 
