--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -161,7 +161,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .pagebox-contact{
 	height: auto;
-	background-image: url(../../img/site-img2.jpg);
+	background-image: url(../img/site-img2.jpg);
 	background-attachment: fixed;
   	background-size: cover;
   	background-repeat: repeat-x;
