--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,7 +4,7 @@ body{
 	text-align: center;
 	color: white !important; 
 	font-family: 'Roboto', sans-serif; 
-	background-color: #1e1e28 !important; 
+	background-color: #339999 !important; 
 }
 
 h2{text-decoration: underline;margin-bottom: 20px !important;}
@@ -15,11 +15,10 @@ h5{font-weight: bold !important;margin: 0px !important;}
 .pdg-top15{padding-top: 15px !important;}
 
 .azul-claro{background: #336699;}
-.azul-medio{background: #2d445c}
-.azul-escuro{background: #23232d;}
+.azul-medio{background: #003366}
+.azul-escuro{background: #000033;}
 
 .verde-claro{background: #02a9a2;}
-.verde-escuro{background: #003333;}
 
 
 /**************************************************************************************************************/
@@ -36,18 +35,25 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	margin-top: 5px;
 	list-style: none;
 } 
-.btn-contact:hover,
-.plans-faq:hover i,
+
+.pagebox-footer i:hover,
 .router-btn-simple:hover h4{
-	color:#02a9a2; /** Ver isso **/
+	color:#02a9a2;
 	cursor: pointer;
 	transition: 0.4s;
 } 	
 
-.router-menu-mobile{
-	visibility: hidden;
-	display: none;
-} 
+.router-btn-mobile{visibility: hidden;display: none;}
+.router-btn-mobile i{font-size: 30px}
+
+.dropdown-toggle{margin-top: 10px;}
+.dropdown-menu{margin-left: 30px; border: 0px;}
+
+.dropdown-toggle, 
+.dropdown-menu button{background: transparent;border: 0px;}
+
+.dropdown-toggle img,
+.dropdown-menu img{height: 20px;}
 
 /**************************************************************************************************************/
 /**** SECTION HOME ****/
@@ -67,9 +73,6 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .pagebox-mission{
 	height: auto;
-	border-bottom: 2px solid #02A9A2;
-	border-top: 2px solid #02A9A2;
-	background-color: #2d445c;
 } 
 
 .pagebox-mission h4{
@@ -106,6 +109,8 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .pagebox-services{
 	height: auto;
+	background-image: url(../img/constellation.svg);
+	background-attachment: fixed;
 } 
 
 .services-steps div{
@@ -133,7 +138,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .plans-box{margin-top: 30px;}
 .plans-price h1{
-	color:#4E9BD4;
+	color:#003366;
 	font-size:50px; 
 }
 .plans-price h1,
@@ -146,7 +151,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 .plans-detail{
 	margin-top: 10px;
 	font-weight: bold;
-	border-bottom: 1px solid #336699;
+	border-bottom: 1px solid #003366;
 } .last-item{ border-bottom: none; margin-bottom: 10px; }
 
 .plans-detail i{margin-top: 5px;}
@@ -183,7 +188,8 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .pagebox-footer i{
 	font-size: 25px;
-	margin: 5px 0px; 
+	margin: 10px 0px; 
+	color: #003366;
 }
 
 /**************************************************************************************************************/
@@ -200,7 +206,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	.home-steps div{margin: 40px 0px;}	
 
 	/**** CLASS CONTACT ****/
-
+	.dropdown-menu{margin-left: 5px;}
 	.pagebox-contact i{margin-top: 30px;}
 }	 
 
@@ -208,8 +214,13 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	/****** DEFAULT ******/
 	
 	.hidden-mobile{visibility: hidden;display: none;}
-	.router-menu-mobile{visibility: visible;display: block;}
 	.pagebox-footer i{margin: 0px 0px 15px 0px; }
+
+	.router-btn-mobile{visibility: visible;display: initial;}
+	.router-btn-mobile .dropdown-menu{margin-left: 0px;}
+
+	.router-btn-simple button{margin-bottom: 5px}
+	.router-btn-simple .dropdown-menu{margin-left: -35px;background: #000033}
 
 }	
 
@@ -222,22 +233,22 @@ h5{font-weight: bold !important;margin: 0px !important;}
 .fixer-cima1{z-index: 10}
 
 .fixer-baixo{
-	border-bottom: 40px solid #336699;
+	border-bottom: 40px solid #003366;
 	border-right: 40px solid transparent;
 }
 
 .fixer-baixo1{
-	border-bottom: 40px solid #336699;
+	border-bottom: 40px solid #003366;
 	border-left: 40px solid transparent;
 }
 
 .fixer-cima{
-	border-top: 40px solid #336699;
+	border-top: 40px solid #003366;
 	border-right: 40px solid transparent;
 }
 
 .fixer-cima1{
-	border-top: 40px solid #336699;
+	border-top: 40px solid #003366;
 	border-left: 40px solid transparent;
 }
 
