--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -13,6 +13,7 @@ h5{font-weight: bold !important;margin: 0px !important;}
 
 .nopadding{padding-right: 0px !important;padding-left: 0px !important;}
 .pdg-top15{padding-top: 15px !important;}
+.pdg-bottom15{padding-bottom: 15px !important;}
 
 .azul-claro{background: #336699;}
 .azul-medio{background: #003366}
@@ -132,6 +133,12 @@ h5{font-weight: bold !important;margin: 0px !important;}
 	background-color: white;
 	color:#363436;
 }
+
+.service-item{
+	padding: 20px;
+	height: 250px;
+	width: 350px;
+} .service-item img{height: 240px;width: 340px;}
 
 /**** SECTION PLANS ****/ 
 
